tests/bad_units_qlist.out
./bad_units_qlist.svx:3:8: error: Unknown instrument "position"
 *units position metres
        ^~~~~~~~
./bad_units_qlist.svx:4:8: error: Unknown instrument "plumb"
 *units plumb metres
        ^~~~~
./bad_units_qlist.svx:5:8: error: Unknown instrument "level"
 *units level metres
        ^~~~~

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 0 warning(s) and 3 error(s) - no output files produced.
