tests/bad_units_qlist.svx
; pos=fail error=3
*fix 1 reference 0 0 0
*units position metres
*units plumb metres
*units level metres
